--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
-    "start": "node dist/bundle.js",
-    "build": "node_modules/.bin/webpack"
+    "start": "node ./server.js",
+    "node": "node dist/bundle.js",
+    "build": "node_modules/.bin/webpack",
+    "postinstall": "npm run build"
   },
   "devDependencies": {
     "ts-loader": "^0.9.0",
     "typescript": "^2.0.3",
     "webpack": "^1.13.2"
+  },
+  "dependencies": {
+    "express": "^4.14.0"
   }
 }
